WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310150
[AutoFill Debugging] Skip invalid URLs when extracting links and images
https://bugs.webkit.org/show_bug.cgi?id=310150
Summary
[AutoFill Debugging] Skip invalid URLs when extracting links and images
Wenson Hsieh
Reported
2026-03-17 17:37:43 PDT
rdar://172706501
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-03-17 18:11:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60826
EWS
Comment 2
2026-03-17 22:33:19 PDT
Committed
309452@main
(f86e3dba3c42): <
https://commits.webkit.org/309452@main
> Reviewed commits have been landed. Closing PR #60826 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug