[AutoFill Debugging] Skip invalid URLs when extracting links and images https://bugs.webkit.org/show_bug.cgi?id=310150 rdar://172706501

Reviewed by Abrar Rahman Protyasha.

Avoid including invalid URLs in text extraction output.

Test: TextExtractionTests.InvalidURLsAreSkipped

* Source/WebKit/Shared/TextExtractionToStringConversion.cpp:
(WebKit::TextExtractionAggregator::stringForURL):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/TextExtractionTests.mm:
(TestWebKitAPI::InvalidURLsAreSkipped)):

Canonical link: https://commits.webkit.org/309452@main